Fix:Footer icons made visible

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -31,7 +31,6 @@ section.benefits_comp .benefit .b_title h2 {
 }
 
 section.benefits_comp .benefit .b_header {
-
     height: 350px;
     min-width: 470px;
     max-width: 475px;
@@ -41,6 +40,7 @@ section.benefits_comp .benefit .b_header {
     section.benefits_comp .benefit .b_header {
         width: 100%;
         height: 250px;
+        min-width: 100%;
     }
 }
 
@@ -76,3 +76,7 @@ section.benefits_comp .benefit .b_header img {
     object-fit: cover;
     border-radius: 40px;
 }
+
+
+
+
